FIx  CSS.  Spacing between comments.  Replies left-side border.

--- a/src/styles.css
+++ b/src/styles.css
@@ -166,6 +166,11 @@ p {
     "Score Comment Comment Comment"
     "ReplyForm ReplyForm ReplyForm ReplyForm"
     "Replies Replies Replies Replies";
+  padding-bottom: 1.25rem;
+}
+
+.card-replies .card-container:last-child {
+  padding-bottom: 0;
 }
 
 .card-score {
@@ -248,8 +253,10 @@ p {
 
 .card-replies {
   grid-area: Replies;
-  padding-top: 2rem;
-  padding-left: 2rem;
+  margin-top: 1.25rem;
+  margin-left: 2.375rem;
+  border-left: solid 2px var(--light-gray);
+  padding-left: 2.375rem;
 }
 
 /* new comments and replies */
@@ -311,6 +318,8 @@ textarea:hover,
 textarea:focus-visible {
   outline: var(--moderate-blue) solid 0.5px;
 }
+
+/* delete modal */
 
 dialog {
   margin: auto;
